--- a/3-condition/exercice-1/index.html
+++ b/3-condition/exercice-1/index.html
@@ -6,6 +6,17 @@
     <title>exercice 1</title>
 </head>
 <body>
+    <script>
+        let age = prompt('Quelle votre age')
     
+        if (age <18) {
+           console.log('vous etes mineur' );
+        } else if ( age >= 18) {
+            console.log('vous etes majeur');
+        }
+
+
+
+    </script>
 </body>
 </html>
