fin exercice variable

--- a/3-condition/exercice-1/index.html
+++ b/3-condition/exercice-1/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <script>
-        let age = prompt('Quelle votre age')
+        let age = prompt('Quelle votre age');
+        age = parseInt(age);
     
         if (age <18) {
            console.log('vous etes mineur' );
