--- a/3-condition/exercice-2/index.html
+++ b/3-condition/exercice-2/index.html
@@ -12,7 +12,7 @@
 
         nombre1 = parseInt(nombre1);
         nombre2 = parseInt(nombre2)
-        console.log(typeof nombre);
+        console.log(typeof nombre1);
 
         if(nombre1 > nombre2){
             console.log('le premier nombre est plus grand que le deuxième nombre');
