--- a/3-condition/exercice-4/index.html
+++ b/3-condition/exercice-4/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <script>
-        let mot_de_passe= prompt('Veuillez saisir votre mot de passe :');
+        let motDePasse= prompt('Veuillez saisir votre mot de passe :');
 
-        if(mot_de_passe.length >= 5 && mot_de_passe.length <=12) {
+        if(motDePasse.length >= 5 && motDePasse.length <=12) {
             console.log('mot de passe valide');
         } else {
             console.log('mot de passe invalide');
