--- a/3-condition/exercice-3/index.html
+++ b/3-condition/exercice-3/index.html
@@ -8,9 +8,9 @@
 <body>
     <script>
         const code= '0000';
-        let mot_de_passe= prompt('Veuillez entrer le mot de passe')
+        let motDePasse= prompt('Veuillez entrer le mot de passe')
 
-        if (mot_de_passe === code) {
+        if (motDePasse === code) {
             alert('ok');
         } else {
             alert('acces interdit');
